2002-12-21	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added Save/Print functionality.
      Chinese NIBs and localized strings file need to be 
      updated.


2002-12-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug that cause the tabview item label 
      attributes to be released when any session was 
      closed. Dictionaries had been static class variables 
      instead of belonging to specific instances.
      
    * Optimized code for setting tab label attributes so 
      that the drawing code is not called unnecessarily.
      

2002-12-20	fabian
    * Fixed the session status display problem
    
2002-12-20	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed all compiler warnings.
    
    * Fixed annoying glitch that would sometimes resize 
      window when the config session window was closed 
      even though the window sizes were not changed.
      
    * Fixed a window sizing problem that was evident in vi.
      I wish NSTabView would offer to calculate its frame 
      based on content size just like NSScrollView.
    

2002-12-19	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Re-implemented UI from button based to real-tab based 
      using NSTabView based on user feedback. Major code 
      changes and simplifications.
      
    * Fixed bug causing a crash when a session was closed 
      without the shell exiting with the "autoclose" 
      preference off.
      
    * Disabled the limit on the window size. Not sure why
      that was there.
      

2002-12-19	fabian
    * Changed version number to 0.6.0
    * Fixed a bug in zh_TW nib file
    * Alt/Option key now can be used as Meta or to add ESC
    * Fixed the "not saving auto-close option" bug
    * Fixed enter key on numeric keyboard problem
    * Fixed a problem that causes transparency settings lost
    * Fixed a lot of bugs related to VT100 emulation.
    
2002-12-18	fabian
    * change the shortcut key to close terminal to command-w